--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <div ng-view></div>
-
+ 
     <script src="../scripts/angular/angular.js"></script>
     <script src="../scripts/angular/angular-resource.js"></script>
     <script src="../scripts/angular/angular-route.js"></script>
@@ -22,8 +22,9 @@
     <script src="../scripts/controllers/maincontroller.js"></script>
     <script src="../scripts/controllers/maindata.js"></script>
     <script src="../scripts/directives/maindirective.js"></script>
-    <script>window.jQuery || document.write('<script src="../scripts/jquery-3.3.1.min.js"><\/script>')</script>
-   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../scripts/main.js"></script>
+    <!-- <script>window.jQuery || document.write('<script src="../scripts/jquery-3.3.1.min.js"><\/script>')</script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <script src="../scripts/main.js"></script> 
+   
 </body>
 </html>
