--- a/app/about.html
+++ b/app/about.html
@@ -27,7 +27,7 @@
               <h2 class="heading-general">{{about.name}}</h2>
             </div>
   
-            <div class="row">
+            <div class="about">
                <div class="about-text move-in-bottom">
                 <p id="profile1">{{about.profile1}}</p>
                 
