--- a/app/gallery.html
+++ b/app/gallery.html
@@ -1,6 +1,6 @@
 
 <div class="cover">
-  <div class="header image-clip">
+  <div class="header">
 
       <div class="header__my-logo">
           <a href="#homepage"><img ng-src="{{event.logoImgUrl}}" alt="{{event.name}}" class="header__logo"/></a>
@@ -44,13 +44,9 @@
           </div>
         </section>
 
-        <div class="icons">
-                <a href="https://www.facebook.com/stephen.okpala.04" target="_blank"><i class="fa fa-facebook-official"></i></a>
-                <a href="https://www.instagram.com/acedeywin" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.github.com/acedeywin" target="_blank"><i class="fa fa-github"></i></a>
-                <a href="https://www.twitter.com/acedeywinn" target="_blank"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/stevon04" target="_blank"><i class="fa fa-linkedin"></i></a>
-                <p class="icons__margin">&copy; Copyright <span >{{date | date:'yyyy'}}</span>. Created by <a href="#name">Me</a> for your Perusal</p>
+       <div class="icons" >
+          <a class="icons__fav" ng-repeat="item in footer" ng-href="{{item.link}}" target="_blank"><i ng-class="item.class"></i></a>
+          <p>&copy; Copyright <span >{{date | date:'yyyy'}}</span>. Created by <a href="#name">Me</a> for your Perusal</p>
         </div>
 
   </div>
