--- a/app/homepage.html
+++ b/app/homepage.html
@@ -27,12 +27,10 @@
                 <span class="name--sub"><img ng-src="{{event.nigerianFlag}}" class="flag" alt="flag" /> {{event.subname}} <img ng-src="{{event.rastaFlag}}" class="flag" alt="flag" /></span>
             </h1>
         </div>
-        <div class="icons">
-                <a href="https://www.facebook.com/stephen.okpala.04" target="_blank"><i class="fa fa-facebook-official"></i></a>
-                <a href="https://www.instagram.com/acedeywin" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.github.com/acedeywin" target="_blank"><i class="fa fa-github"></i></a>
-                <a href="https://www.twitter.com/acedeywinn" target="_blank"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/stevon04" target="_blank"><i class="fa fa-linkedin"></i></a>
-                <p>&copy; Copyright <span >{{date | date:'yyyy'}}</span>. Created by <a href="#name">Me</a> for your Perusal</p>
+
+        <div class="icons" >
+          <a class="icons__fav" ng-repeat="item in footer" ng-href="{{item.link}}" target="_blank"><i ng-class="item.class"></i></a>
+          <p>&copy; Copyright <span >{{date | date:'yyyy'}}</span>. Created by <a href="#name">Me</a> for your Perusal</p>
         </div>
+        
     </div>
