--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,8 @@
     <script src="../scripts/controllers/maincontroller.js"></script>
     <script src="../scripts/controllers/maindata.js"></script>
     <script src="../scripts/directives/maindirective.js"></script>
-    <!-- <script>window.jQuery || document.write('<script src="../scripts/jquery-3.3.1.min.js"><\/script>')</script>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <script>window.jQuery || document.write('<script src="../scripts/jquery-3.3.1.min.js"><\/script>')</script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../scripts/main.js"></script> 
    
 </body>
