--- a/app/about.html
+++ b/app/about.html
@@ -1,10 +1,14 @@
 
 <div class="cover">
-    <div class="header">
+    <div class="view header">
   
-        <div class="header__my-logo">
+        <div class="header__my-logo main">
             <a href="#homepage"><img ng-src="{{event.logoImgUrl}}" alt="{{event.name}}" class="header__logo"/></a>
         </div>
+
+        <!-- <div class="header__my-logo mini">
+          <a href="#homepage"><img ng-src="{{event.miniLogo}}" alt="{{event.name}}" class="header__logo--mini"/></a>
+      </div> -->
 
     <!--Navbar starts here-->
     <div class="navigation">
@@ -38,7 +42,7 @@
             </div>
           </section>
   
-         <div class="icons" >
+         <div class="icon" >
           <a class="icons__fav" ng-repeat="item in footer" ng-href="{{item.link}}" target="_blank"><i ng-class="item.class"></i></a>
           <p>&copy; Copyright <span >{{date | date:'yyyy'}}</span>. Created by <a href="#name">Me</a> for your Perusal</p>
         </div>
