--- a/app/gallery.html
+++ b/app/gallery.html
@@ -1,10 +1,13 @@
-
 <div class="cover">
   <div class="header">
-
-      <div class="header__my-logo">
-          <a href="#homepage"><img ng-src="{{event.logoImgUrl}}" alt="{{event.name}}" class="header__logo"/></a>
-      </div>
+    <div class="header__my-logo">
+      <a href="homepage"
+        ><img
+          ng-src="{{event.logoImgUrl}}"
+          alt="{{event.name}}"
+          class="header__logo"
+      /></a>
+    </div>
 
     <!--Navbar starts here-->
     <div class="navigation">
@@ -12,42 +15,84 @@
         <span class="bar"></span>
       </div>
 
-      <nav class="nav" onclick="myNav()">         
-        <div class="overlay"> 
+      <nav class="nav" onclick="myNav()">
+        <div class="overlay">
           <ul>
-              <li ng-repeat="item in navBar"><a ng-href="{{item.link}}" ng-class="item.class" onclick="myLink()" ng-bind="item.title" target="{{item.target}}"></a></li>
+            <li ng-repeat="item in navBar">
+              <a
+                ng-href="{{item.link}}"
+                ng-class="item.class"
+                onclick="myLink()"
+                ng-bind="item.title"
+                target="{{item.target}}"
+              ></a>
+            </li>
           </ul>
-        </div> 
-      </nav> 
-    </div>
-    <!--Navbar ends here--> 
-
-        <section class="general">
-          <div class="center">
-            <h2 class="heading-general">{{galleryName}}</h2>
-          </div>
-
-          <div class="row show-pics">
-
-            <div ng-repeat="item in gallery" class="col-1-of-2" ng-class="item.position">
-              <h3 class="heading-picture center" ng-bind="item.status"></h3>
-              <div ng-class="item.mainClass">
-                <img ng-src="{{item.pics1}}" alt="{{event.name}}" ng-class="item.class1">
-                <img ng-src="{{item.pics2}}" alt="{{event.name}}" ng-class="item.class2">
-                <img ng-src="{{item.pics3}}" alt="{{event.name}}" ng-class="item.class3">
-                <img ng-src="{{item.pics4}}" alt="{{event.name}}" ng-class="item.class4">
-                <img ng-src="{{item.pics5}}" alt="{{event.name}}" ng-class="item.class5">
-                <img ng-src="{{item.pics6}}" alt="{{event.name}}" ng-class="item.class6">
-              </div>
-            </div>
-
-          </div>
-        </section>
-
-       <div class="icons" >
-          <a class="icons__fav" ng-repeat="item in footer" ng-href="{{item.link}}" target="_blank"><i ng-class="item.class"></i></a>
-          <p>&copy; Copyright <span >{{date | date:'yyyy'}}</span>. Created by <a href="#name">Me</a> for your Perusal</p>
         </div>
+      </nav>
+    </div>
+    <!--Navbar ends here-->
 
+    <section class="general">
+      <div class="center">
+        <h2 class="heading-general">{{galleryName}}</h2>
+      </div>
+
+      <div class="row show-pics">
+        <div
+          ng-repeat="item in gallery"
+          class="col-1-of-2"
+          ng-class="item.position"
+        >
+          <h3 class="heading-picture center" ng-bind="item.status"></h3>
+          <div ng-class="item.mainClass">
+            <img
+              ng-src="{{item.pics1}}"
+              alt="{{event.name}}"
+              ng-class="item.class1"
+            />
+            <img
+              ng-src="{{item.pics2}}"
+              alt="{{event.name}}"
+              ng-class="item.class2"
+            />
+            <img
+              ng-src="{{item.pics3}}"
+              alt="{{event.name}}"
+              ng-class="item.class3"
+            />
+            <img
+              ng-src="{{item.pics4}}"
+              alt="{{event.name}}"
+              ng-class="item.class4"
+            />
+            <img
+              ng-src="{{item.pics5}}"
+              alt="{{event.name}}"
+              ng-class="item.class5"
+            />
+            <img
+              ng-src="{{item.pics6}}"
+              alt="{{event.name}}"
+              ng-class="item.class6"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="icons">
+      <a
+        class="icons__fav"
+        ng-repeat="item in footer"
+        ng-href="{{item.link}}"
+        target="_blank"
+        ><i ng-class="item.class"></i
+      ></a>
+      <p>
+        &copy; Copyright <span>{{date | date:'yyyy'}}</span>. Created by
+        <a href="#name">Me</a> for your Perusal
+      </p>
+    </div>
   </div>
 </div>
