--- a/app/homepage.html
+++ b/app/homepage.html
@@ -1,36 +1,59 @@
+<div class="header">
+  <div class="header__my-logo">
+    <a href="homepage"
+      ><img
+        ng-src="{{event.logoImgUrl}}"
+        alt="{{event.name}}"
+        class="header__logo"
+    /></a>
+  </div>
 
-
-    <div class="header">
-        <div class="header__my-logo">
-            <a href="#homepage"><img ng-src="{{event.logoImgUrl}}" alt="{{event.name}}" class="header__logo"/></a>
-        </div>
-        
-    <!--Navbar starts here-->
-    <div class="navigation">
-        <div class="menu" onclick="myMenu()">
-          <span class="bar"></span>
-        </div>
-  
-        <nav class="nav" onclick="myNav()">         
-          <div class="overlay"> 
-            <ul>
-                <li ng-repeat="item in navBar"><a ng-href="{{item.link}}" ng-class="item.class" onclick="myLink()" ng-bind="item.title" target="{{item.target}}"></a></li>
-            </ul>
-          </div> 
-        </nav> 
-      </div>
-      <!--Navbar ends here--> 
-
-        <div class="header__screen-text">
-            <h1 class="name">
-                <span class="name--main">{{event.fullname}}</span>
-                <span class="name--sub"><img ng-src="{{event.nigerianFlag}}" class="flag" alt="flag" /> {{event.subname}} <img ng-src="{{event.rastaFlag}}" class="flag" alt="flag" /></span>
-            </h1>
-        </div>
-
-        <div class="icons" >
-          <a class="icons__fav" ng-repeat="item in footer" ng-href="{{item.link}}" target="_blank"><i ng-class="item.class"></i></a>
-          <p>&copy; Copyright <span >{{date | date:'yyyy'}}</span>. Created by <a href="#name">Me</a> for your Perusal</p>
-        </div>
-        
+  <!--Navbar starts here-->
+  <div class="navigation">
+    <div class="menu" onclick="myMenu()">
+      <span class="bar"></span>
     </div>
+
+    <nav class="nav" onclick="myNav()">
+      <div class="overlay">
+        <ul>
+          <li ng-repeat="item in navBar">
+            <a
+              ng-href="{{item.link}}"
+              ng-class="item.class"
+              onclick="myLink()"
+              ng-bind="item.title"
+              target="{{item.target}}"
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <!--Navbar ends here-->
+
+  <div class="header__screen-text">
+    <h1 class="name">
+      <span class="name--main">{{event.fullname}}</span>
+      <span class="name--sub"
+        ><img ng-src="{{event.nigerianFlag}}" class="flag" alt="flag" />
+        {{event.subname}}
+        <img ng-src="{{event.rastaFlag}}" class="flag" alt="flag"
+      /></span>
+    </h1>
+  </div>
+
+  <div class="icons">
+    <a
+      class="icons__fav"
+      ng-repeat="item in footer"
+      ng-href="{{item.link}}"
+      target="_blank"
+      ><i ng-class="item.class"></i
+    ></a>
+    <p>
+      &copy; Copyright <span>{{date | date:'yyyy'}}</span>. Created by
+      <a href="#name">Me</a> for your Perusal
+    </p>
+  </div>
+</div>
