--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
+      href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link
@@ -15,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
+
     <link
       rel="shortcut icon"
       type="image/png"
@@ -24,7 +29,7 @@
 
   <body>
     <div ng-view></div>
-
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../scripts/angular/angular.js"></script>
     <script src="../scripts/angular/angular-resource.js"></script>
     <script src="../scripts/angular/angular-route.js"></script>
