ch: update portfolio

--- a/app/about.html
+++ b/app/about.html
@@ -53,7 +53,7 @@
       </div>
     </section>
 
-    <div class="icon">
+    <div class="icons">
       <a
         class="icons__fav"
         ng-repeat="item in footer"
