--- a/app/homepage.html
+++ b/app/homepage.html
@@ -36,10 +36,12 @@
     <h1 class="name">
       <span class="name--main">{{event.fullname}}</span>
       <span class="name--sub"
-        ><img ng-src="{{event.nigerianFlag}}" class="flag" alt="flag" />
+        >
+        <img ng-src="{{event.nigerianFlag}}" class="flag" alt="flag" />
         {{event.subname}}
         <img ng-src="{{event.rastaFlag}}" class="flag" alt="flag"
-      /></span>
+      />
+    </span>
     </h1>
   </div>
 
